--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // https://mvnrepository.com/artifact/com.auth0/java-jwt(JWT 의존성)
+    implementation 'com.auth0:java-jwt:3.18.2'
+
 }
 
 test {
